--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+###> IDE ###
+/.idea/
+###< IDE ###
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -8,3 +11,10 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
