Main page added

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.enable_v2_protocol: true
+    app.supported_locales: 'en|de'
 
 services:
     # default configuration for services in *this* file
