--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
-        "bootstrap": "^5.1.3"
+        "bootstrap": "^5.1.3",
+        "jquery": "^3.6.0",
+        "select2": "^4.1.0-rc.0"
     }
 }
