--- a/.env
+++ b/.env
@@ -31,3 +31,10 @@ DATABASE_URL="mysql://root:B!e281ckr@127.0.0.1:3306/therapy_scheme_generator?ser
 WKHTMLTOPDF_PATH=/usr/bin/wkhtmltopdf
 WKHTMLTOIMAGE_PATH=/usr/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
+
+###> translations ###
+LOCO_DSN=loco://5zQgC3y0tL8OArXd-yh6RgbcBnAbNtyzG@default
+###< translations ###
+###> symfony/loco-translation-provider ###
+# LOCO_DSN=loco://API_KEY@default
+###< symfony/loco-translation-provider ###
