--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -5,10 +5,12 @@ framework:
         fallbacks:
             - en
             - de
-#        providers:
+        providers:
 #            crowdin:
 #                dsn: '%env(CROWDIN_DSN)%'
-#            loco:
-#                dsn: '%env(LOCO_DSN)%'
+            loco:
+                dsn: '%env(LOCO_DSN)%'
+                domains: ['messages']
+                locales: ['en', 'de']
 #            lokalise:
 #                dsn: '%env(LOKALISE_DSN)%'
