--- a/.env
+++ b/.env
@@ -23,9 +23,9 @@ APP_SECRET=eae32a583f08c22886f3d2daf32be5a0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:secret@database:3306/therapy_scheme_generator?serverVersion=8.0&charset=utf8mb4"
+DATABASE_URL="mysql://root:secret@database:3306/therapy_scheme_generator?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="mysql://root:B!e281ckr@127.0.0.1:3306/therapy_scheme_generator?serverVersion=8.0&charset=utf8mb4"
-# DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> knplabs/knp-snappy-bundle ###
