--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
     "devDependencies": {
-        "@hotwired/stimulus": "^3.0.0",
-        "@popperjs/core": "^2.11.5",
-        "@symfony/stimulus-bridge": "^3.0.0",
-        "@symfony/webpack-encore": "^1.7.0",
-        "bootstrap": "^5.1.3",
-        "core-js": "^3.0.0",
-        "jquery": "^3.6.0",
-        "regenerator-runtime": "^0.13.2",
-        "sass": "^1.50.0",
-        "sass-loader": "^12.0.0",
-        "webpack-notifier": "^1.6.0"
+        "@hotwired/stimulus": "^3.1.0",
+        "@popperjs/core": "^2.11.6",
+        "@symfony/stimulus-bridge": "^3.2.1",
+        "@symfony/webpack-encore": "^4.0.0",
+        "@babel/core": "^7.19.3",
+        "@babel/preset-env": "^7.19.4",
+        "bootstrap": "^5.2.2",
+        "core-js": "^3.25.5",
+        "jquery": "^3.6.1",
+        "regenerator-runtime": "^0.13.10",
+        "sass": "^1.55.0",
+        "sass-loader": "^13.1.0",
+        "webpack-notifier": "^1.15.0",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0"
     },
     "license": "UNLICENSED",
     "private": true,
