--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
     "devDependencies": {
+        "@babel/core": "^7.19.3",
+        "@babel/preset-env": "^7.19.4",
         "@hotwired/stimulus": "^3.1.0",
         "@popperjs/core": "^2.11.6",
         "@symfony/stimulus-bridge": "^3.2.1",
         "@symfony/webpack-encore": "^4.0.0",
-        "@babel/core": "^7.19.3",
-        "@babel/preset-env": "^7.19.4",
         "bootstrap": "^5.2.2",
         "core-js": "^3.25.5",
         "jquery": "^3.6.1",
         "regenerator-runtime": "^0.13.10",
         "sass": "^1.55.0",
         "sass-loader": "^13.1.0",
-        "webpack-notifier": "^1.15.0",
         "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0"
+        "webpack-cli": "^4.10.0",
+        "webpack-notifier": "^1.15.0"
     },
     "license": "UNLICENSED",
     "private": true,
