--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "fzaninotto/faker": "^1.5",
         "symfony/debug-bundle": "6.1.*",
         "symfony/maker-bundle": "^1.38",
         "symfony/monolog-bundle": "^3.0",
