--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "symfony/runtime": "6.1.*",
         "symfony/translation": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
+        "symfony/ux-autocomplete": "^2.4",
+        "symfony/ux-twig-component": "^2.4",
         "symfony/webpack-encore-bundle": "^1.15",
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
