Basic "hierarchical" labels search implementation

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@popperjs/core": "^2.11.6",
         "@symfony/stimulus-bridge": "^3.2.1",
         "@symfony/ux-autocomplete": "file:vendor/symfony/ux-autocomplete/assets",
+        "@symfony/ux-live-component": "file:vendor/symfony/ux-live-component/assets",
         "@symfony/webpack-encore": "^4.0.0",
         "bootstrap": "^5.2.2",
         "core-js": "^3.25.5",
