Persisting schema templates implementation

--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,16 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "babdev/pagerfanta-bundle": "^3.7",
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "knplabs/knp-paginator-bundle": "^5.8",
         "knplabs/knp-snappy-bundle": "^1.9",
+        "pagerfanta/doctrine-dbal-adapter": "^3.6",
+        "pagerfanta/doctrine-orm-adapter": "^3.6",
+        "pagerfanta/pagerfanta": "^3.6",
+        "pagerfanta/twig": "^3.6",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
@@ -24,8 +29,9 @@
         "symfony/twig-bundle": "6.1.*",
         "symfony/ux-autocomplete": "^2.4",
         "symfony/ux-live-component": "^2.4",
+        "symfony/ux-swup": "^2.4",
         "symfony/ux-twig-component": "^2.4",
-        "symfony/webpack-encore-bundle": "^1.15",
+        "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.3",
