--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
         "@babel/preset-env": "^7.19.4",
         "@hotwired/stimulus": "^3.0.0",
         "@popperjs/core": "^2.11.6",
+        "@swup/debug-plugin": "^1.0",
+        "@swup/fade-theme": "^1.0",
+        "@swup/forms-plugin": "^1.0",
+        "@swup/slide-theme": "^1.0",
         "@symfony/stimulus-bridge": "^3.2.1",
         "@symfony/ux-autocomplete": "file:vendor/symfony/ux-autocomplete/assets",
         "@symfony/ux-live-component": "file:vendor/symfony/ux-live-component/assets",
+        "@symfony/ux-swup": "file:vendor/symfony/ux-swup/Resources/assets",
         "@symfony/webpack-encore": "^4.0.0",
         "bootstrap": "^5.2.2",
         "core-js": "^3.25.5",
@@ -14,6 +19,7 @@
         "regenerator-runtime": "^0.13.10",
         "sass": "^1.55.0",
         "sass-loader": "^13.1.0",
+        "swup": "^2.0",
         "tom-select": "^2.0.1",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
