Post upgrade fixes

--- a/config/routes/ux_live_component.yaml
+++ b/config/routes/ux_live_component.yaml
@@ -1,4 +1,5 @@
-live_component:
-    resource: '@LiveComponentBundle/Resources/config/routing/live_component.xml'
+ux_live_component:
+    #resource: '@LiveComponentBundle/Resources/config/routing/live_component.xml'
+    resource: '@LiveComponentBundle/config/routes.php'
     # uncomment to add localization to your components
-    prefix: '/{_locale}'
+    prefix: /{_locale}/_components
