adding sorting in stub list page

--- a/config/packages/knp_paginator.yaml
+++ b/config/packages/knp_paginator.yaml
@@ -2,7 +2,7 @@ knp_paginator:
   page_range: 5
   default_options:
     page_name: page
-    sort_field_name: sort
+    sort_field_name: ~ # Disable sorting
     sort_direction_name: direction
     distinct: true
     filter_field_name: filterField
